<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.hit_pay.hitpay.terminal.viewmodel.TerminalViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragment.TerminalFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay"
            app:elevation="0.0001dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/backdrop">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay">

                <ImageView
                    android:id="@+id/img_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_back" />

                <TextView
                    android:id="@+id/toolbar_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/terminal"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/toolbar_text"
                    android:textStyle="bold" />

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:id="@+id/backdrop"
            style="@style/Widget.Example.Backdrop"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app_bar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/empty_reader"
                    android:src="@mipmap/readerempty"
                    android:alpha="1"
                    android:visibility="gone"
                    android:paddingTop="40dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:visibility="gone"
                    android:text="@string/no_reader" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:text="@string/reader_connection"
                    android:paddingTop="40dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/discover_button"
                    style="@style/Widget.Example.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cornerRadius="0dp"
                    android:textAlignment="textStart"
                    android:text="@string/discover_readers"
                    android:textColor="@color/green" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:text="@string/device_type"
                    android:paddingTop="40dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/device_type_button"
                    style="@style/Widget.Example.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layoutDirection="rtl"
                    app:cornerRadius="0dp"
                    android:textAlignment="textStart"
                    app:icon="@drawable/ic_right_arrow"
                    app:iconTint="@color/colorPrimaryDark" />

                <Switch
                    android:id="@+id/simulated_switch"
                    style="@style/Widget.Example.Switch"
                    android:checked="false"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="40dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:visibility="gone"
                    android:textAlignment="textStart"
                    android:text="@string/simulated" />

                <TextView
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="16dp"
                    android:text="@string/simulation_explanation" />

            </LinearLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>