<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:elevation="0.0001dp"
        app:layout_constraintBottom_toTopOf="@id/backdrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <ImageView
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_back" />

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="Setup Reader"
                android:textColor="@color/textColor"
                android:textSize="@dimen/toolbar_text"
                android:textStyle="bold" />

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/backdrop"
        style="@style/Widget.Example.Backdrop"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_bar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/reader_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:text="Successfully Connected\nYou are ready to start\naccepting payments with\ncard reader"
                android:textSize="18sp" />


            <ImageView
                android:id="@+id/qr_image_view"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="50dp"
                android:layout_marginRight="40dp"
                android:src="@mipmap/ic_pos_large" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:paddingStart="16dp"
                android:paddingTop="40dp"
                android:paddingEnd="16dp"
                android:text="@string/reader_connection"
                android:visibility="gone" />

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.Example.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/disconnect"
                android:textAlignment="textStart"
                android:textColor="@color/colorAccent"
                android:visibility="gone"
                app:cornerRadius="0dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:paddingStart="16dp"
                android:paddingTop="40dp"
                android:paddingEnd="16dp"
                android:text="@string/common_workflows"
                android:visibility="gone" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/collect_card_payment_button"
                style="@style/Widget.Example.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layoutDirection="rtl"
                android:text="@string/collect_card_payment"
                android:textAlignment="textStart"
                android:visibility="gone"
                app:cornerRadius="0dp"
                app:icon="@drawable/ic_right_arrow"
                app:iconTint="@color/colorPrimaryDark" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/read_reusable_card_button"
                style="@style/Widget.Example.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layoutDirection="rtl"
                android:text="@string/read_card_for_recurring_payment"
                android:textAlignment="textStart"
                android:visibility="gone"
                app:cornerRadius="0dp"
                app:icon="@drawable/ic_right_arrow"
                app:iconTint="@color/colorPrimaryDark" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/update_reader_button"
                style="@style/Widget.Example.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layoutDirection="rtl"
                android:text="@string/update_reader_software"
                android:textAlignment="textStart"
                android:visibility="gone"
                app:cornerRadius="0dp"
                app:icon="@drawable/ic_right_arrow"
                app:iconTint="@color/colorPrimaryDark" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ln_done"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/disconnect_button"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:foregroundGravity="center"
                app:cardBackgroundColor="@color/primaryColor"
                app:cardCornerRadius="0dp"
                app:cardElevation="6dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="DISCONNECT READER"
                        android:textAlignment="center"
                        android:textColor="@color/textColor"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        tools:ignore="MissingPrefix" />
                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/btn_done"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:foregroundGravity="center"
                app:cardBackgroundColor="@color/facebookBlue"
                app:cardCornerRadius="0dp"
                app:cardElevation="6dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="DONE"
                        android:textAlignment="center"
                        android:textColor="@color/textColor"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        tools:ignore="MissingPrefix" />
                </RelativeLayout>

            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>